# s2d2

./: .gitignore  CLAUDE.md  Cargo.toml  wrangler.toml
src/: email.rs  lib.rs
