[package]
name = "s2d2"
version = "0.1.0"
edition = "2021"
authors = ["pasmophobia <l@leonmatsuistroemsvik.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0" }
console_error_panic_hook = { version = "0.1.7" }
json = "0.12.4"
web-sys = { version = "0.3.77", features = ["FormData", "Headers"] }
regex = "1.11.1"
anyhow = "1.0.98"
